# kirigamitest

./: CMakeLists.txt
src/: CMakeLists.txt  helloworld.desktop  main.cpp  testplot_main.cpp  testplot_widget.cpp
src/contents/ui/: main.qml
